# yaffo

./: .gitignore  EXIFTOOL_SETUP.md  THIRD_PARTY_LICENSES.txt  activate_venv.sh  mypy.ini  pyproject.toml  pytest.ini  run_huey.sh  setup.py  tasks.py
.claude/: CLAUDE.md
migrations/: 001_add_face_locations.sql  002_add_location_and_tags.sql  README.md
photo_organizer/: app.py  common.py  db.py  logging_config.py  tasks.py
photo_organizer/background_tasks/: config.py  tasks.py
photo_organizer/db/: models.py
photo_organizer/db/repositories/: person_repository.py
photo_organizer/domain/: compare_utils.py
photo_organizer/routes/: faces.py  home.py  index.py  init_routes.py  locations.py  people.py  photos.py  utilities.py
photo_organizer/scripts/: assign_faces.py  group_faces.py  index_photos.py  init_db.py  organize_videos.py  profile_index_photo.py  remove_duplicates.py  update_face_locations.py
photo_organizer/static/: action-links.css  base.css  button.css  empty-state.css  filters.js  form.css  index.css  match-type.css  multi-select.css  multi-select.js  notification.css  notification.js  searchable-select.js  sidebar.css
photo_organizer/static/components/: collapsible_panel.js  job_progress.css  job_progress.js  modal.css  modal.js  overlay.css  overlay.js
photo_organizer/static/faces/: index.css  index.js
photo_organizer/static/filters/: location-autocomplete.css  location-autocomplete.js
photo_organizer/static/locations/: list.css  list.js
photo_organizer/static/people/: faces.css  list.css  list.js
photo_organizer/static/photos/: face-reassign.js  tags.js  view.css  view.js
photo_organizer/static/settings/: index.js
photo_organizer/static/utilities/: _base.css  auto_assign_people.js  auto_assign_results.js  (+3 more)
photo_organizer/tasks/: config.py  main.py  tasks.py
photo_organizer/templates/: _sidebar.html  base.html  index.html
photo_organizer/utils/: image.py  index_photos.py
tests/: test_stub.py
yaffo/: app.py  common.py  job_tracker.py  logging_config.py  template_filters.py
yaffo/background_tasks/: config.py  main.py  tasks.py  utils.py
yaffo/db/: models.py
yaffo/domain/: compare_utils.py
yaffo/routes/: faces.py  home.py  init_routes.py  jobs.py  locations.py  people.py  photos.py  settings.py  utilities.py
yaffo/scripts/: apply_image_tags.py  assign_faces.py  group_faces.py  index_photos.py  init_db.py  organize_photos.py  organize_videos.py  profile_index_photo.py  remove_duplicates.py  update_face_locations.py
yaffo/static/: button.css  form.css  index.css  searchable-select.css  sidebar.css  table.css  utils.js
yaffo/templates/: base.html  index.html
yaffo/utils/: context.py  exiftool_path.py  file_system.py  image.py  index_photos.py  photo_dates.py  platform_checks.py  request_helpers.py  write_metadata.py
yaffo_ui_tests/: .env.example  README.md  jest.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.json
yaffo_ui_tests/generated_tests/: photo-gallery.spec.ts  photo_gallery.json  photo_gallery.spec.ts  photo_gallery_loads_with_valid_images.spec.ts  photo_gallery_year_filter.spec.ts
yaffo_ui_tests/lib/: types.ts
yaffo_ui_tests/scripts/: run-tests.sh  seed_database.py
yaffo_ui_tests/specs/: face_assignment.yaml  photo_gallery.yaml
(+145 files in other folders)
