[tool.briefcase]
project_name = "Yaffo Photo Organizer"
bundle = "com.jasonturan"

[tool.briefcase.app.yaffo]
formal_name = "Yaffo Photo Organizer"
description = "An app to organize photos using face recognition and metadata"
long_description = """A powerful photo organization tool that uses EXIF metadata,
face recognition, and duplicate detection to automatically organize and index your photos."""
sources = ["yaffo"]
icon = "resources/icon"
splash = "resources/splash"

requires = [
    "blinker==1.9.0",
    "click==8.3.0",
    "dlib==20.0.0",
    "face-recognition==1.3.0",
    "face_recognition_models==0.3.0",
    "Flask==3.1.2",
    "Flask-SQLAlchemy==3.1.1",
    "huey==2.5.2",
    "ImageHash==4.3.2",
    "invoke==2.2.0",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.6",
    "joblib==1.5.2",
    "MarkupSafe==3.0.2",
    "numpy==2.2.6",
    "opencv-python==4.12.0.88",
    "pathspec==0.12.1",
    "piexif==1.1.3",
    "pillow==11.3.0",
    "pillow_heif==1.1.0",
    "platformdirs",
    "pydash",
    "PyWavelets==1.9.0",
    "requests==2.32.3",
    "scikit-learn==1.7.2",
    "scipy==1.16.2",
    "SQLAlchemy==2.0.43",
    "threadpoolctl==3.6.0",
    "tqdm==4.67.1",
    "typing_extensions==4.15.0",
    "Werkzeug==3.1.3",
]

# macOS configuration
[tool.briefcase.app.yaffo.macOS]
requires = []
support_package = "https://briefcase-support.s3.amazonaws.com/python/3.13/macOS/Python-3.13.3-macOS-support.b1.tar.gz"

# Include exiftool binary for macOS
[[tool.briefcase.app.yaffo.macOS.app]]
resources = [
    "resources/bin/darwin/exiftool",
]

# Linux configuration
[tool.briefcase.app.yaffo.linux]
requires = []
system_requires = [
    "perl",  # Required for exiftool
]

# Include exiftool binary for Linux
[[tool.briefcase.app.yaffo.linux.appimage]]
resources = [
    "resources/bin/linux/exiftool",
]

# Windows configuration
[tool.briefcase.app.yaffo.windows]
requires = []

# Include exiftool binary for Windows
[[tool.briefcase.app.yaffo.windows.app]]
resources = [
    "resources/bin/windows/exiftool.exe",
]

# Build configuration
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yaffo"
version = "0.0.1"
description = "An app to organize photos"
authors = [{name = "Jason Turan"}]
requires-python = ">=3.8"
dependencies = [
    "blinker==1.9.0",
    "click==8.3.0",
    "dlib==20.0.0",
    "face-recognition==1.3.0",
    "face_recognition_models==0.3.0",
    "Flask==3.1.2",
    "Flask-SQLAlchemy==3.1.1",
    "huey==2.5.2",
    "ImageHash==4.3.2",
    "invoke==2.2.0",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.6",
    "joblib==1.5.2",
    "MarkupSafe==3.0.2",
    "numpy==2.2.6",
    "opencv-python==4.12.0.88",
    "pathspec==0.12.1",
    "piexif==1.1.3",
    "pillow==11.3.0",
    "pillow_heif==1.1.0",
    "platformdirs",
    "pydash",
    "PyWavelets==1.9.0",
    "requests==2.32.3",
    "scikit-learn==1.7.2",
    "scipy==1.16.2",
    "SQLAlchemy==2.0.43",
    "threadpoolctl==3.6.0",
    "tqdm==4.67.1",
    "typing_extensions==4.15.0",
    "Werkzeug==3.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "snakeviz",
    "briefcase",
]